log/build_2023-09-29_10-07-35/castelet/stderr.log
  File "/home/keny/MANOS_ws/install/castelet/lib/python3.8/site-packages/castelet/castelet.py", line 185
    self.node. = self.node.create_subscription(TPose, '/'+ self.namespace + '/pose', self.update_pose, 2)
               ^
SyntaxError: invalid syntax

